# sabedoria

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  openapi.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: dependabot.yml
.github/workflows/: release-quayio-dev.yml  release-quayio-latest.yml  release-quayio-tag.yml
docs/: baserow-models.md
sabedoria/: __init__.py  api.py  cli.py  config.py  core.py  gunicorn.py
sabedoria/models/: __init__.py  course.py  cv.py  db.py  education.py  employer.py  health.py  interest.py  job.py  platform.py  project.py  social.py
sabedoria/views/: apiv1.py  apiv2.py  health.py  webhooks.py
tests/: base.py  test_health_route_health.py  test_health_route_liquid_401.py  test_health_route_liquid_basic_workflow.py  test_health_route_liquid_invalid_uuid.py  test_health_route_liquid_not_exist.py  test_health_route_liquid_today.py  test_route_v2_.py  test_route_v2_health.py  test_route_v2_lang.py  test_route_v2_social.py  test_static_robotstxt.py  test_view_health.py  test_view_health_liquid_401.py  test_view_health_liquid_basic_workflow.py  test_view_health_liquid_invalid_uuid.py  test_view_health_liquid_not_exist.py  test_view_health_liquid_today.py  test_view_webhook_quayio_repository_push.py
tests/data/: quay.io-dockerfile-build-failed.json  quay.io-dockerfile-build-queued.json  quay.io-dockerfile-build-started.json  quay.io-dockerfile-build-successfully-completed.json  quay.io-package-vulnerability-found.json  quay.io-repository-push.json
