[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "sabedoria"
authors = [
    {name = "Flaverton Rodrigues Rosa", email = "contact@droposhado.org"},
]
description = ""
readme = "README.md"
requires-python = ">=3.10"

dynamic = ["version"]

dependencies = [
    "certifi==2023.7.22",
    "charset-normalizer==3.3.2",
    "click==8.1.3",
    "Flask==3.0.3",
    "Flask-HTTPAuth==4.7.0",
    "Flask-SQLAlchemy",
    "psycopg2-binary",
    "gunicorn==22.0.0",
    "idna==3.4",
    "itsdangerous==2.2.0",
    "Jinja2==3.1.4",
    "MarkupSafe==2.1.2",
    "requests==2.31.0",
    "urllib3==1.26.18",
    "Werkzeug==3.0.1",
    "sentry-sdk[flask]"
]

[project.optional-dependencies]
test = [
    "pylint",
    "isort",
    "bandit",
    "ruff",
    "liccheck"
]

[project.license]
file = "LICENSE"

[project.urls]
"Source Code" = "https://github.com/droposhado/sabedoria"
"homepage" = "https://github.com/droposhado/sabedoria"

[tool.isort]
profile = "black"
src_paths = ["sabedoria"]

[tool.pylint.main]
# autodetect
jobs = 0
ignore = [
    "CVS",
    "config.py",
    "gunicorn.py",
    "tests",
    "venv"
]

[tool.pylint.format]
max-line-length = 88

[tool.pylint."messages control"]
# Dev state not use module docstring to rapid rework
disable = [
    "missing-module-docstring"
]

[tool.bandit]
exclude_dirs = [
    "tests",
    ".git",
    "__pycache__",
    "venv"]

[tool.ruff]
line-length = 88
show-fixes = true
select = [
    "F",  # pyflakes
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "Q"
]

[tool.ruff.per-file-ignores]
"sabedoria/gunicorn.py" = ["E501"]

[tool.liccheck]
dependencies = true
optional_dependencies = ["test"]

authorized_licenses = [
    "bsd",
    "new bsd",
    "bsd license",
    "new bsd license",
    "simplified bsd",
    "apache",
    "apache 2.0",
    "Apache License 2.0",
    "Apache Software",
    "apache software license",
    "isc license",
    "isc license (iscl)",
    "mit",
    "mit license",
    "python software foundation license",
    "Mozilla Public License 2.0 (MPL 2.0)"
]

unauthorized_licenses = [
    "gnu lgpl",
    "gpl v3",
    "lgpl",
    "lgpl with exceptions",
    "lgpl with exceptions or zpl",
    "zpl",
    "zpl 2.1",
    "zope public",
    "zope public license",
    "GNU Library or Lesser General Public License (LGPL)",
    "unknown"
]

[tool.liccheck.authorized_packages]
psycopg2-binary = "*"
typing-extensions = "*"

# pylint skip
pylint = "*"
astroid = "*"